add implementation on Linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,21 @@
 
 project(ScreenCapture)
 
-link_libraries(msimg32)
+if(WIN32)
+    link_libraries(msimg32)
+else()
+    link_libraries(X11 Xrender Xext)
+endif()
 
-set(SRC_FILES CImage.cpp ImageFactory.cpp main.cpp Dpi.cpp win/CharsetConvert.cpp)
+FILE(GLOB SRC_FILES "*.cpp")
 
-## window system does not show console window
+if(WIN32)
+    FILE(GLOB SRC_OS_FILES "win/*.cpp")
+else()
+    FILE(GLOB SRC_OS_FILES "linux/*.cpp")
+endif()
+
+## window system does not show console
 if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
     if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
         set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS")
@@ -15,4 +25,4 @@ if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
     endif()
 endif()
 
-add_executable(ScreenCapture ${SRC_FILES})
+add_executable(ScreenCapture ${SRC_FILES} ${SRC_OS_FILES})
